handle Search in view-Staffs

--- a/src/app/admin/staff-manager/view-staff/view-staff.component.html
+++ b/src/app/admin/staff-manager/view-staff/view-staff.component.html
@@ -9,7 +9,7 @@
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div id="hic">
                             <div id="demo-2">
-                                <input type="search" placeholder="Tìm kiếm" style="border: 1px solid #e6e6e6;">
+                                <input type="search" placeholder="Tìm kiếm" (keyup)="onChange($event)" style="border: 1px solid #e6e6e6;">
                             </div>
                         </div>
                         <div class="dropdown mr-1">
@@ -48,7 +48,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr *ngFor="let staff of staffs">
+                                <tr *ngFor="let staff of staffsFilter">
                                     <td>{{staff.staffId}}
                                         <br> <!-- thêm ô checkbox để chọn từng nhân viên  -->
                                         <input type="checkbox" style="border-radius: 10px;">
