--- a/src/app/client/client-home/client-home.component.html
+++ b/src/app/client/client-home/client-home.component.html
@@ -1442,11 +1442,11 @@
         </footer>
         <div id="fixed_Left" class="banner_fixed" style="display: block; left: 124.5px;"><a target="_blank"
                 href="https://bds123.vn/"><img
-                    src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/bds123_120_300.gif"></a>
+                    src="https://phongtro123.com/images/bds123_120_300.gif"></a>
         </div>
         <div id="fixed_Right" class="banner_fixed" style="display: block; right: 124.5px;"><a target="_blank"
                 rel="nofollow" href="http://bit.ly/nhom-phong-tro-facebook"><img
-                    src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/ad_nhom_fb.jpg"></a>
+                    src="https://phongtro123.com/images/ad_nhom_fb.jpg"></a>
         </div>
     </div>
     <div id="scroll_Top" class="js-scroll-top"></div>
