firebase and interface client

--- a/src/app/admin/shared/modal-logout/modal-logout.component.html
+++ b/src/app/admin/shared/modal-logout/modal-logout.component.html
@@ -4,8 +4,7 @@
 </a>
 
 <!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true" *ngIf="isLoggedIn">
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" *ngIf="isLoggedIn">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -23,8 +22,7 @@
     </div>
 </div>
 <!-- Login Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true" *ngIf="!isLoggedIn">
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" *ngIf="!isLoggedIn">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -42,8 +40,7 @@
     </div>
 </div>
 <!-- Paypal -->
-<div class="modal fade" id="paypal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true" *ngIf="isLoggedIn">
+<div class="modal fade" id="paypal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" *ngIf="isLoggedIn">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -55,7 +52,7 @@
             <div class="modal-body">Chọn "Đồng ý" bên dưới nếu bạn muốn chuyển đến trang nạp tiền.</div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">Hủy bỏ</button>
-                <a class="btn btn-primary" href="client/paypal/handle">Đồng ý</a>
+                <a class="btn btn-primary" href="client/profile/paypal-handle">Đồng ý</a>
             </div>
         </div>
     </div>
