Re-enter the password when registering employees

--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <label>Nhập lại mật khẩu</label>
-                                    <input type="repassword" [formControlName]="'repassword'" class="form-control form-control-user"
+                                    <input type="password" [formControlName]="'repassword'" class="form-control form-control-user"
                                         id="exampleRepeatPassword" placeholder="" required >
                                     <div class="valid-false">
                                         <span *ngIf="messNumber == 16">
