--- a/src/app/client/client-home/client-home.component.html
+++ b/src/app/client/client-home/client-home.component.html
@@ -1,11 +1,12 @@
-<body class="home home loaded ready">
+<div id="trangchu" class="home home loaded ready">
     <div id="webpage">
         <div class="container container-header clearfix"><a id="top-logo" href="https://phongtro123.com/"
                 title="cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ">cho thuê phòng trọ, cho thuê nhà trọ, tìm
                 phòng trọ</a>
             <div class="user-welcome clearfix js-reload-html-header">
                 <div class="welcome-text">Xin chào, <strong>Nguyễn Thanh Hiệp</strong>. Mã tài khoản:
-                    <strong>99624</strong>. Số dư: <strong>0 VNĐ</strong></div>
+                    <strong>99624</strong>. Số dư: <strong>0 VNĐ</strong>
+                </div>
                 <div class="dropdown">
                     <button class="btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
@@ -44,11 +45,6 @@
                         chủ</a></li>
                 <li class="navbar_item clearfix "><a href="https://phongtro123.com/cho-thue-phong-tro">Cho thuê phòng
                         trọ</a></li>
-                <li class="navbar_item clearfix "><a href="https://phongtro123.com/nha-cho-thue">Nhà cho thuê</a></li>
-                <li class="navbar_item clearfix "><a href="https://phongtro123.com/cho-thue-can-ho">Cho thuê căn hộ</a>
-                </li>
-                <li class="navbar_item clearfix "><a href="https://phongtro123.com/cho-thue-mat-bang">Cho thuê mặt
-                        bằng</a></li>
                 <li class="navbar_item clearfix "><a href="https://phongtro123.com/tim-nguoi-o-ghep">Tìm người ở
                         ghép</a></li>
                 <li class="navbar_item clearfix "><a href="https://phongtro123.com/blog.html">Blog</a></li>
@@ -249,7 +245,7 @@
                             <figure><a
                                     href="https://phongtro123.com/phong-vip-biet-thu-binh-loi-full-noi-that-pr585180.html"><img
                                         class="lazy_done"
-                                        src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/untitled_1617533434.png"
+                                        src="https://blogcdn.muaban.net/wp-content/uploads/2018/07/5-luu-y-khi-tim-phong-tro-Ha-Noi.jpg"
                                         data-src="https://static123.com/phongtro123/uploads/images/thumbs/450x300/fit/2021/04/04/untitled_1617533434.png"
                                         alt="Phòng VIP biệt thự Bình Lợi, full nội thất" height="100" width="100"
                                         layout="responsive" data-loaded="true"></a><span class="images-number">14
@@ -273,7 +269,7 @@
                             <figure><a
                                     href="https://phongtro123.com/tinh-thanh/ho-chi-minh/nha-tro-gio-giac-tu-do-khong-chung-chu.html"><img
                                         class="lazy_done"
-                                        src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/f4c6e289-aba5-45ad-883c-bbe1a49f8c62-1568169937_1584156095.jpg"
+                                        src="https://blogcdn.muaban.net/wp-content/uploads/2018/07/5-luu-y-khi-tim-phong-tro-Ha-Noi.jpg"
                                         data-src="https://static123.com/phongtro123/uploads/images/thumbs/450x300/fit/2020/03/14/f4c6e289-aba5-45ad-883c-bbe1a49f8c62-1568169937_1584156095.jpg"
                                         alt="Nhà trọ giờ giấc tự do, không chung chủ" height="100" width="100"
                                         layout="responsive" data-loaded="true"></a><span class="images-number">18
@@ -296,7 +292,7 @@
                             <figure><a
                                     href="https://phongtro123.com/tinh-thanh/ho-chi-minh/phong-tro-day-du-tien-nghi-tai-415-tran-xuan-soan-quan-7-gia-tu-2-6t-3-3t-0903-64-79-88-c-binh.html"><img
                                         class="lazy"
-                                        src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/image-placeholder.png"
+                                        src="https://blogcdn.muaban.net/wp-content/uploads/2018/07/5-luu-y-khi-tim-phong-tro-Ha-Noi.jpg"
                                         data-src="https://static123.com/phongtro123/uploads/images/thumbs/450x300/fit/2021/01/21/1_1611197216.jpg"
                                         alt="PHÒNG CAO CẤP MÁY LẠNH, FULL NỘI THẤT 2.9T tại 415 TRẦN XUÂN SOẠN, P.TÂN KIỂNG, Q7. Call: 0938.677.288 Mr. Hùng."
                                         height="100" width="100" layout="responsive"></a><span class="images-number">16
@@ -318,7 +314,7 @@
                             <figure><a
                                     href="https://phongtro123.com/tinh-thanh/ho-chi-minh/cho-thue-phong-tro-moi-xay-12846-thien-phuoc-p9-q-tb.html"><img
                                         class="lazy"
-                                        src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/image-placeholder.png"
+                                        src="https://blogcdn.muaban.net/wp-content/uploads/2018/07/5-luu-y-khi-tim-phong-tro-Ha-Noi.jpg"
                                         data-src="https://static123.com/phongtro123/uploads/images/thumbs/450x300/fit/2020/02/26/tp_1582694811.jpg"
                                         alt="Cho thuê phòng trọ 128/46 Thiên Phước, P.9, Q.Tân Bình (gần vòng xoay Lê Đại Hành)"
                                         height="100" width="100" layout="responsive"></a><span class="images-number">1
@@ -341,7 +337,7 @@
                             <figure><a
                                     href="https://phongtro123.com/tinh-thanh/ho-chi-minh/phong-tro-moi-xay-4813-luong-the-vinh-p-tan-thoi-hoa-q-tan-phu-gan-dam-sen.html"><img
                                         class="lazy"
-                                        src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/image-placeholder.png"
+                                        src="https://news.mogi.vn/wp-content/uploads/2019/10/cho-thue-phong-tro-ha-noi-anh-bia.jpg"
                                         data-src="https://static123.com/phongtro123/uploads/images/thumbs/450x300/fit/2019/10/05/48lv_1570260355.jpg"
                                         alt="Phòng trọ mới xây 48/13 Lương Thế Vinh, P.Tân Thới Hòa, Q.Tân Phú (gần Đầm Sen)"
                                         height="100" width="100" layout="responsive"></a><span class="images-number">1
@@ -364,7 +360,7 @@
                             <figure><a
                                     href="https://phongtro123.com/phong-tro-binh-tan-day-du-tien-nghi-nga-tu-4-xa-pr585118.html"><img
                                         class="lazy"
-                                        src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/image-placeholder.png"
+                                        src="https://blogcdn.muaban.net/wp-content/uploads/2018/07/5-luu-y-khi-tim-phong-tro-Ha-Noi.jpg"
                                         data-src="https://static123.com/phongtro123/uploads/images/thumbs/450x300/fit/2021/04/03/1_1617423597.jpg"
                                         alt="Phòng Trọ, Căn Hộ Bình Tân, Đầy Đủ Tiện Nghi, Ngã Tư 4 Xã" height="100"
                                         width="100" layout="responsive"></a><span class="images-number">5
@@ -1089,12 +1085,12 @@
                         </ul>
                     </section>
                     <section class="section">
-                        <!-- <center><a target="_blank"
-                                href="https://atrungroi.com/xstc-xo-so-tu-chon-mega-645-vietlott.html"><img
-                                    alt="Xem kết quả xổ số tự chọn Mega 6/45 Vietlott mới nhất"
-                                    title="Xem kết quả xổ số tự chọn Mega 6/45 Vietlott mới nhất"
-                                    src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/xem-ket-qua-xo-so-mega-moi-nhat-340.gif"></a>
-                        </center> -->
+                        <!-- <center> -->
+                        <a target="_blank" href="https://atrungroi.com/xstc-xo-so-tu-chon-mega-645-vietlott.html"><img
+                                alt="Xem kết quả xổ số tự chọn Mega 6/45 Vietlott mới nhất"
+                                title="Xem kết quả xổ số tự chọn Mega 6/45 Vietlott mới nhất"
+                                src="https://image.thanhnien.vn/768/uploaded/thanhthuy/2020_07_25/kqxs2-4-6_jssz_rihu.jpg"></a>
+                        <!-- </center> -->
                     </section>
                     <section class="section section-aside-tinmoidang">
                         <div class="section-header" style="margin-botttom: 10px;"><span class="section-title">Bài viết
@@ -1310,8 +1306,13 @@
                                 class="whyus-countup-item-text">Lượt xem/tháng</span></div>
                     </div>
                     <h3>Chi phí thấp, hiệu quả tối đa</h3>
-                    <div class="clearfix" style="display: flex; justify-content: center;"><span
-                            class="star star-5"></span></div>
+                    <div class="clearfix" style="display: flex; justify-content: center;">
+                        <span class="fa fa-star checked" style=" color: orange;"></span>
+                        <span class="fa fa-star checked" style=" color: orange;"></span>
+                        <span class="fa fa-star checked" style=" color: orange;"></span>
+                        <span class="fa fa-star checked" style=" color: orange;"></span>
+                        <span class="fa fa-star checked" style=" color: orange;"></span>
+                    </div>
                     <p class="testimonial">Trước khi biết website phongtro123, mình phải tốn nhiều công sức và chi phí
                         cho việc đăng tin cho thuê: từ việc phát tờ rơi, dán giấy, và đăng lên các website khác nhưng
                         hiệu quả không cao. Từ khi biết website phongtro123.com, mình đã thử đăng tin lên và đánh giá
@@ -1405,14 +1406,18 @@
                                     href="https://zalo.me/273083239502498077"><i></i></a><a class="social-viber"
                                     rel="nofollow" target="_blank" href="viber://chat?number=0917686101"><i></i></a><a
                                     class="social-twitter" rel="nofollow" target="_blank"
-                                    href="https://twitter.com/phongtro123"><i></i></a></div><br><span
-                                class="footer-col-title">Phương thức thanh toán</span>
-                            <div class="clearfix"><span class="payment_icon icon_visa"></span><span
-                                    class="payment_icon icon_mastercard"></span><span
-                                    class="payment_icon icon_jcb"></span><span
-                                    class="payment_icon icon_internet_banking"></span><span
-                                    class="payment_icon icon_momo"></span><span
-                                    class="payment_icon icon_tienmat"></span></div>
+                                    href="https://twitter.com/phongtro123"><i></i></a>
+                            </div>
+                            <br>
+                            <span class="footer-col-title">Phương thức thanh toán</span>
+                            <div class="clearfix">
+                                <span class="payment_icon icon_visa" ></span>
+                                <span class="payment_icon icon_mastercard"></span>
+                                <span class="payment_icon icon_jcb"></span>
+                                <span class="payment_icon icon_internet_banking"></span>
+                                <span class="payment_icon icon_momo"></span>
+                                <span class="payment_icon icon_tienmat"></span>
+                            </div>
                         </div>
                     </div>
                     <div class="footer-company">
@@ -1424,27 +1429,27 @@
                             Hồ Chí Minh.</p>
                         <p>Giấy phép đăng ký kinh doanh số 0313588502 do Sở kế hoạch và Đầu tư thành phố Hồ Chí Minh cấp
                             ngày 24 tháng 12 năm 2015.</p>
-                        <!-- <center style="display: flex; align-items: center; justify-content: center;"><a
-                                class="icon-dkbct" style="display: inline-block; margin: 0 5px;" rel="nofollow"
+                        <div style="display: flex; align-items: center; justify-content: center;">
+                            <a class="icon-dkbct" style="display: inline-block; margin: 0 5px;" rel="nofollow"
                                 target="_blank"
                                 href="http://online.gov.vn/HomePage/WebsiteDisplay.aspx?DocId=43297"></a><a
                                 rel="nofollow" style="display: inline-block; margin: 0 5px;" target="_blank"
                                 href="https://www.dmca.com/Protection/Status.aspx?ID=c20c5527-4840-484e-adc5-37179174f55b&amp;refurl=https://phongtro123.com/"
-                                title="DMCA.com Protection Status" class="dmca-badge"><img
-                                    src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/dmca-badge-w200-2x1-04.jpg"
-                                    style="height: 50px;" alt="DMCA.com Protection Status"></a>
+                                title="DMCA.com Protection Status" class="dmca-badge">
+                                <img src="https://www.dmca.com/img/dmca_logo.png?=sd" style="height: 50px;"
+                                    alt="DMCA.com Protection Status">
+                            </a>
                             <script
                                 src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/DMCABadgeHelper.min.js.download"></script>
-                        </center> -->
+                        </div>
                     </div>
                 </div>
             </div>
         </footer>
-        <div id="fixed_Left" class="banner_fixed" style="display: block; left: 124.5px;"><a target="_blank"
-                href="https://bds123.vn/"><img
-                    src="https://phongtro123.com/images/bds123_120_300.gif"></a>
+        <div id="fixed_Left" class="banner_fixed" style="display: block; left: 39.5px;"><a target="_blank"
+                href="https://bds123.vn/"><img src="https://phongtro123.com/images/bds123_120_300.gif"></a>
         </div>
-        <div id="fixed_Right" class="banner_fixed" style="display: block; right: 124.5px;"><a target="_blank"
+        <div id="fixed_Right" class="banner_fixed" style="display: block; right: 39.5px;"><a target="_blank"
                 rel="nofollow" href="http://bit.ly/nhom-phong-tro-facebook"><img
                     src="https://phongtro123.com/images/ad_nhom_fb.jpg"></a>
         </div>
@@ -1486,4 +1491,5 @@
     </div><iframe
         src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/saved_resource(4).html"
         title="chat widget logging" style="display: none !important;"></iframe>
-</body>
+</div>
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
