--- a/src/app/client/profiles/paypal/handle-paypal/view-handle-paypal.component.html
+++ b/src/app/client/profiles/paypal/handle-paypal/view-handle-paypal.component.html
@@ -33,51 +33,35 @@
                                                 <p>Chọn nhanh số tiền cần nạp</p>
                                                 <div class="form-check form-check-inline mr-4 js-btn-group-price">
                                                     <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio5" [value]="5" checked="">
-                                                    <label class="form-check-label" for="radio5">
-                                    5 USD
-                                </label>
+                                                    <label class="form-check-label" for="radio5">5 USD</label>
                                                 </div>
                                                 <div class="form-check form-check-inline mr-4 js-btn-group-price">
                                                     <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio10" [value]="10">
-                                                    <label class="form-check-label" for="radio10">
-                                    10 USD
-                                </label>
+                                                    <label class="form-check-label" for="radio10">10 USD</label>
                                                 </div>
                                                 <div class="form-check form-check-inline mr-4 js-btn-group-price">
                                                     <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio20" [value]="20">
-                                                    <label class="form-check-label" for="radio20">
-                                    20 USD
-                                </label>
+                                                    <label class="form-check-label" for="radio20">20 USD</label>
                                                 </div>
                                                 <div class="form-check form-check-inline mr-4 js-btn-group-price">
                                                     <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio50" [value]="50">
-                                                    <label class="form-check-label" for="radio50">
-                                    50 USD
-                                </label>
+                                                    <label class="form-check-label" for="radio50">50 USD</label>
                                                 </div>
                                                 <div class="form-check form-check-inline mr-4 js-btn-group-price">
                                                     <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio100" [value]="100">
-                                                    <label class="form-check-label" for="radio100">
-                                    100 USD
-                                </label>
+                                                    <label class="form-check-label" for="radio100">100 USD</label>
                                                 </div>
                                                 <div class="form-check form-check-inline mr-4 js-btn-group-price">
                                                     <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio200" [value]="200">
-                                                    <label class="form-check-label" for="radio200">
-                                    200 USD
-                                </label>
+                                                    <label class="form-check-label" for="radio200">200 USD</label>
                                                 </div>
                                                 <div class="form-check form-check-inline js-btn-group-price">
                                                     <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio500" [value]="500">
-                                                    <label class="form-check-label" for="radio500">
-                                    500 USD
-                                </label>
+                                                    <label class="form-check-label" for="radio500">500 USD</label>
                                                 </div>
                                                 <div class="form-check form-check-inline js-btn-group-price">
                                                     <input class="form-check-input" [formControlName]="'money'" type="radio" name="money" id="radio1000" [value]="1000">
-                                                    <label class="form-check-label" for="radio1000">
-                                    1000 USD
-                                </label>
+                                                    <label class="form-check-label" for="radio1000">1000 USD</label>
                                                 </div>
                                             </div>
                                             <div class="form-group mt-4">
