add component room mates and rent room

--- a/src/app/client/client-home/client-home.component.html
+++ b/src/app/client/client-home/client-home.component.html
@@ -9,7 +9,7 @@
                 </div>
                 <div class="dropdown">
                     <button class="btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
+                        aria-haspopup="true" aria-expanded="false" routerLink="/client/profile/article-manager">
                         Quản lý tài khoản <i class="arrow-down"></i>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
@@ -34,18 +34,18 @@
 
                     </ul>
                 </div>
-                <a rel="nofollow" class="btn btn-add-post" href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng
+                <a rel="nofollow" class="btn btn-add-post" routerLink="/client/profile/create-article">Đăng
                     tin mới <i></i></a>
 
             </div>
         </div>
         <nav id="navbar-menu">
             <ul id="menu-main-menu" class="container-menu clearfix level-1">
-                <li class="navbar_item clearfix active current-menu-item"><a href="https://phongtro123.com/">Trang
+                <li class="navbar_item clearfix active current-menu-item"><a routerLink="/client/home">Trang
                         chủ</a></li>
-                <li class="navbar_item clearfix "><a href="https://phongtro123.com/cho-thue-phong-tro">Cho thuê phòng
+                <li class="navbar_item clearfix "><a routerLink="/client/rent-room">Cho thuê phòng
                         trọ</a></li>
-                <li class="navbar_item clearfix "><a href="https://phongtro123.com/tim-nguoi-o-ghep">Tìm người ở
+                <li class="navbar_item clearfix "><a routerLink="/client/room-mates">Tìm người ở
                         ghép</a></li>
                 <li class="navbar_item clearfix "><a href="https://phongtro123.com/blog.html">Blog</a></li>
                 <li class="navbar_item clearfix "><a href="https://phongtro123.com/huong-dan-su-dung">Hướng dẫn</a></li>
