--- a/src/app/client/profiles/shared/header/header.component.html
+++ b/src/app/client/profiles/shared/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="desktop dashboard quan-ly nap-tien the-tin-dung loaded ready">
     <div id="webpage">
         <nav class="navbar navbar-expand-md fixed-top flex-md-nowrap p-0" id="mobile_navbar_top">
-            <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/admin/home">ThanhBinh.com</a>
+            <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/client/home">ThanhBinh.com</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" routerLink="/admin/home">Trang chủ</a>
+                        <a class="nav-link" routerLink="/client/home">Trang chủ</a>
                     </li>
 
                     <li class="nav-item d-none d-md-block">
