component rent-room and room-mates and handle routing client

--- a/src/app/shared/upload-file/upload-file.component.html
+++ b/src/app/shared/upload-file/upload-file.component.html
@@ -5,11 +5,11 @@
       <a [href]="downloadURL">{{ downloadURL }}</a>
     </div>
   
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-2 col-6" *ngFor="let img of images | async">
         <div class="card">
           <img class="card-img-top" src="{{ img.url }}" width="100%"/>
           <button (click)="removeFile(img)">Delete</button>
         </div>
       </div>
-    </div>
+    </div> -->
