--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -9,7 +9,7 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">THÊM NHÂN VIÊN MỚI!</h1>
                         </div>
-                        <form class="user" [formGroup]="StaffForm" (ngSubmit)="createStaff()">
+                        <form class="user" [formGroup]="StaffForm" enctype="multipart/form-data" (ngSubmit)="createStaff()">
                             <div class="form-group">
                                 <label> Họ và tên </label>
                                 <input type="text" [formControlName]="'name'" class="form-control form-control-user" id="name" placeholder="" required>
@@ -101,7 +101,7 @@
                             <div class="form-group">
                                 <div class="form-control form-control-user">
                                     <select name="subject" [formControlName]="'role'" [ngModel]="1">
-                                        <option disabled="disabled" [value]="1">Lựa Chọn</option>
+                                        <option [disabled]="true" [value]="1">Lựa Chọn</option>
                                         <option [value]="true">Admin</option>
                                         <option [value]="false">Super Admin</option>
                                     </select>
@@ -117,7 +117,7 @@
                             <div class="form-group">
                                 <label> Ảnh </label>
                                 <!-- <input type="file" class="form-control form-control-user"id="image" placeholder=""> -->
-                                <upload-file #uploadfile (urlFile)="linkUrl($event)" [formControlName]="'image'" [folderName]="ImgName" class="form-control form-control-user"></upload-file>
+                                <upload-file #uploadfile (urlFile)="linkUrl($event)" [folderName]="ImgName" class="form-control form-control-user"></upload-file>
                             </div>
 
                             <div class="form-group row">
